# krios-etl-gis

./: .env.example  .gitignore  ANALYSIS_NOTES.md  DATA_COLLECTION_NOTES.md  DECISIONS.md  README.md  main.py  pyproject.toml
data/: aoi_test.geojson
data/raw/: fingrid_capacity_headroom.geojson
scripts/: create_dem_tindex.py
src/: __init__.py  cli.py  config.py
src/analysis/: __init__.py  fatal_flaws.py  pipeline.py  scoring.py
src/collectors/: __init__.py  base.py  fingrid_collector.py  mml_collector.py  natura2000_collector.py  osm_collector.py  run_all.py  syke_collector.py
src/processors/: __init__.py  dem_to_slope.py  fingrid_processor.py  mml_parcel_processor.py  natura2000_processor.py  osm_processor.py  syke_processor.py
src/visualization/: README.md  __init__.py  generate_map.py
